# financial-advisor

./: .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  MVP_SCOPE.md  Makefile  PHASE1_SUMMARY.md  PRODUCT_AUDIT.md  README-MY.md  README.md  TODO.md  pyproject.toml
.github/workflows/: malaysia-fsi-ci.yml
docs/malaysia-fsi/: accountant-feedback-form.md  bank-statement-parser.md  cli-usage.md  demo-script.md  demo-troubleshooting.md  invoice-matching.md  limitations.md  monthly-sme-reporting.md  pilot-checklist.md  production-readiness-checklist.md  receipt-categorization.md  sme-feedback-form.md  web-demo.md
malaysia_fsi/: __init__.py
malaysia_fsi/bank_statement/: __init__.py  cli.py  invoice_matcher.py  parser.py  report.py  schema.py
malaysia_fsi/demo/: __init__.py  __main__.py  cli.py
malaysia_fsi/receipts/: __init__.py  categorizer.py  cli.py  monthly_expense_summary.py  report.py  schema.py
malaysia_fsi/web_demo/: __init__.py  app.py
plugins/institutional-finance/: README.md
scripts/: validate_malaysia_phase1.py  verify_malaysia_fsi.py
test-fixtures/: README.md
test-fixtures/demo/: README.md
test-fixtures/documents/: sample-ssm-form24.txt  sample-takaful-policy.txt
test-fixtures/receipts/: grocery-receipt.json  packaging-purchase.json  restaurant-supplier.json
test-fixtures/sample-data/: maybank-valid.csv  sample-invoice.json  sample-maybank-statement-malformed.csv
tests/: test_bank_statement_parser.py  test_demo_cli.py  test_invoice_matcher.py  test_monthly_summary.py  test_receipt_categorizer.py  test_web_demo.py
(+34 files in other folders)
