[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malaysia-fsi-offline-reconciliation"
version = "0.1.0"
description = "Offline Malaysian SME reconciliation assistance toolkit"
requires-python = ">=3.9"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["plugins", "managed-agent-cookbooks", "claude-for-msft-365-install"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
